# sdk2

./: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  readme.md
config/: LDS-15D-B25R.txt  LDS-50C-2.txt  LDS-50C-3.txt  LDS-50C-C20E.txt  LDS-50C-C30E.txt  LDS-50C-E.txt  LDS-50C-R.txt  LDS-E100-R.txt  LDS-E110-R.txt  LDS-E120-R.txt  LDS-E200-A_232.txt  LDS-E200-A_485.txt  LDS-E200-E.txt  LDS-E200-R.txt  LDS-E210-R.txt  LDS-E300-E.txt  LDS-E300-R.txt  LDS-E310-E.txt  LDS-E320-S.txt  LDS-E340-E.txt  LDS-E400-E-R.txt  LDS-E400-E.txt  LSS-40D-C30E.txt  LSS-40D-C30E_vpc.txt  LSS-40S-B20E44.txt  LSS-40S-B20E44_vpc.txt  bluesea_web.txt  template.txt  udp.txt
demo/: main.cpp
docs/: SDK开发手册.docx  SDK开发手册V3.0.docx  雷达web接口.docx
example/: main.cpp
sdk/: Global.cpp  Global.h  LidarDataProcess.cpp  LidarDataProcess.h  data.h  error.h  filter.cpp  parser.cpp  standard_interface.cpp  standard_interface.h  standard_interface_linux.cpp  standard_interface_win32.cpp  user.cpp
sdk/linux/: uart_linux.cpp  uart_linux.h  udp_linux.cpp  udp_linux.h
sdk/service/: LidarCheckService.cpp  LidarCheckService.h  LidarCheckService_linux.cpp  LidarCheckService_win32.cpp  LidarWebService.cpp  LidarWebService.h  ZoneAlarm.h  ZoneAlarm_linux.cpp  ZoneAlarm_win32.cpp
sdk/win32/: uart_win32.cpp  uart_win32.h  udp_win32.cpp  udp_win32.h
tools/: 1.txt
tools/web/: bluesea.js  index.html
web/: bluesea.js  index.html
workspace/shell/: build.sh
workspace/shell/web/: index.html
workspace/vc10/: demo.sln
workspace/vc10/demo/: demo.vcxproj  demo.vcxproj.filters
workspace/vc10/demo/web/: index.html  web.code-workspace
